--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -9,14 +9,19 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=367,27
+Pos=985,74
 Size=215,340
-Collapsed=1
+Collapsed=0
 
 [Window][Cursor Position]
 Pos=60,60
 Size=240,66
 Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=455,194
+Size=671,534
+Collapsed=1
 
 [Docking][Data]
 DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 CentralNode=1
