--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -17,9 +17,6 @@
     <Filter Include="third_party\glad">
       <UniqueIdentifier>{5f2433d9-19b2-434e-8089-21b4becec3fc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\FlexEngine\Loader">
-      <UniqueIdentifier>{af4987ea-e5b4-45ee-bde7-d86af28bbe18}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\FlexEngine\Reflection">
       <UniqueIdentifier>{e9041521-9d51-46c9-8a4b-f92edb080361}</UniqueIdentifier>
     </Filter>
@@ -47,6 +44,9 @@
     <Filter Include="src\FlexEngine\AssetManager">
       <UniqueIdentifier>{21c5c0a3-1d77-4018-8eac-f285cb506a86}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\FlexEngine\FMOD">
+      <UniqueIdentifier>{67fe59ca-fc79-45da-8672-f84c195c3eb0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\pch.cpp">
@@ -69,9 +69,6 @@
     </ClCompile>
     <ClCompile Include="src\FlexEngine\flexlogger.cpp">
       <Filter>src\FlexEngine</Filter>
-    </ClCompile>
-    <ClCompile Include="src\FlexEngine\Loader\fmodstudio.cpp">
-      <Filter>src\FlexEngine\Loader</Filter>
     </ClCompile>
     <ClCompile Include="src\FlexEngine\uuid.cpp">
       <Filter>src\FlexEngine</Filter>
@@ -193,6 +190,9 @@
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\openglspriterenderer.cpp">
       <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
     </ClCompile>
+    <ClCompile Include="src\FlexEngine\FMOD\AudioManager.cpp">
+      <Filter>src\FlexEngine\FMOD</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pch.h">
@@ -221,9 +221,6 @@
     </ClInclude>
     <ClInclude Include="src\FlexEngine\flexlogger.h">
       <Filter>src\FlexEngine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\FlexEngine\Loader\fmodstudio.h">
-      <Filter>src\FlexEngine\Loader</Filter>
     </ClInclude>
     <ClInclude Include="src\FlexEngine\uuid.h">
       <Filter>src\FlexEngine</Filter>
@@ -368,6 +365,9 @@
     </ClInclude>
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\openglspriterenderer.h">
       <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\FMOD\AudioManager.h">
+      <Filter>src\FlexEngine\FMOD</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
