starting - hierarchy view

--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -9,12 +9,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=985,74
-Size=215,340
-ViewportPos=1484,482
-ViewportId=0xAD8E88F2
+Pos=808,27
 Size=468,355
-Collapsed=0
+Collapsed=1
 
 [Window][Cursor Position]
 Pos=60,60
@@ -22,9 +19,33 @@ Size=240,66
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=455,194
-Size=671,534
+Pos=612,94
+Size=601,461
 Collapsed=1
+
+[Window][Test Window]
+Pos=13,108
+Size=237,407
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=325,135
+Size=430,450
+Collapsed=0
+
+[Window][Hierarchy]
+Pos=47,146
+Size=514,378
+Collapsed=0
+
+[Window][Scene Hierarchy]
+Pos=28,57
+Size=444,374
+Collapsed=0
+
+[Table][0xD181190E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
 [Docking][Data]
 DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 CentralNode=1
