--- a/MicroChess/MicroChess.vcxproj
+++ b/MicroChess/MicroChess.vcxproj
@@ -156,6 +156,8 @@
     <ClInclude Include="src\Components\characterinput.h" />
     <ClInclude Include="src\Components\physics.h" />
     <ClInclude Include="src\Components\rendering.h" />
+    <ClInclude Include="src\Editor\editor.h" />
+    <ClInclude Include="src\Editor\hierarchyview.h" />
     <ClInclude Include="src\Layers.h" />
     <ClInclude Include="src\Layers\base.h" />
     <ClInclude Include="src\Layers\battle.h" />
@@ -181,6 +183,8 @@
     <ClCompile Include="src\Components\characterinput.cpp" />
     <ClCompile Include="src\Components\physics.cpp" />
     <ClCompile Include="src\Components\rendering.cpp" />
+    <ClCompile Include="src\Editor\editor.cpp" />
+    <ClCompile Include="src\Editor\hierarchyview.cpp" />
     <ClCompile Include="src\Layers\base.cpp" />
     <ClCompile Include="src\Layers\battle.cpp" />
     <ClCompile Include="src\Layers\board.cpp" />
