--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -9,9 +9,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=808,27
-Size=468,355
-Collapsed=1
+Pos=454,70
+Size=103,32
+Collapsed=0
 
 [Window][Cursor Position]
 Pos=60,60
@@ -19,8 +19,8 @@ Size=240,66
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=612,94
-Size=601,461
+Pos=392,35
+Size=199,58
 Collapsed=1
 
 [Window][Test Window]
@@ -39,14 +39,25 @@ Size=514,378
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=28,57
-Size=444,374
+Pos=0,37
+Size=228,713
 Collapsed=0
+DockId=0x00000001,0
+
+[Window][Inspector]
+Pos=963,37
+Size=317,713
+Collapsed=0
+DockId=0x00000004,0
 
 [Table][0xD181190E,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 CentralNode=1
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=961,713 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=228,713 Selected=0x2E9237F7
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=731,713 CentralNode=1
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=317,713 Selected=0xE7039252
 
