add 2500 game objects by pressing 0
Sorry guys, our fps is 1

--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -9,8 +9,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=454,70
-Size=103,32
+ViewportPos=1228,220
+ViewportId=0xAD8E88F2
+Size=440,351
 Collapsed=0
 
 [Window][Cursor Position]
@@ -39,16 +40,16 @@ Size=514,378
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,37
-Size=228,713
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Inspector]
-Pos=963,37
-Size=317,713
+Pos=1113,37
+Size=167,713
 Collapsed=0
 DockId=0x00000004,0
+
+[Window][Inspector]
+Pos=899,37
+Size=212,713
+Collapsed=0
+DockId=0x00000002,0
 
 [Table][0xD181190E,2]
 Column 0  Weight=1.0000
@@ -56,8 +57,8 @@ Column 1  Weight=1.0000
 
 [Docking][Data]
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=961,713 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=228,713 Selected=0x2E9237F7
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=731,713 CentralNode=1
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=317,713 Selected=0xE7039252
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1111,713 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1066,713 CentralNode=1
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=212,713 Selected=0xE7039252
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=167,713 Selected=0x2E9237F7
 
