--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -9,8 +9,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-ViewportPos=1548,241
-ViewportId=0xAD8E88F2
+Pos=721,357
 Size=468,355
 Collapsed=0
 
