<Improv> Added Alignment support for matrix calculation
Alignment of sprite support added to matrix calculation

--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -9,7 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=721,357
+ViewportPos=1385,270
+ViewportId=0xAD8E88F2
 Size=468,355
 Collapsed=0
 
