--- a/MicroChess/MicroChess.vcxproj
+++ b/MicroChess/MicroChess.vcxproj
@@ -149,8 +149,9 @@
     <ClInclude Include="src\BattleSystems\targetingsystem.h" />
     <ClInclude Include="src\BattleSystems\turnorderdisplay.h" />
     <ClInclude Include="src\CharacterMoves\moves.h" />
+    <ClInclude Include="src\CharacterPrefab\characterprefab.h" />
+    <ClInclude Include="src\ChronoGear\chronogearstats.h" />
     <ClInclude Include="src\Components\battlecomponents.h" />
-    <ClInclude Include="src\Components\charactercomponents.h" />
     <ClInclude Include="src\Components\game.h" />
     <ClInclude Include="src\Components\physics.h" />
     <ClInclude Include="src\Components\rendering.h" />
@@ -170,8 +171,9 @@
     <ClCompile Include="src\BattleSystems\targetingsystem.cpp" />
     <ClCompile Include="src\BattleSystems\turnorderdisplay.cpp" />
     <ClCompile Include="src\CharacterMoves\moves.cpp" />
+    <ClCompile Include="src\CharacterPrefab\characterprefab.cpp" />
+    <ClCompile Include="src\ChronoGear\chronogearstats.cpp" />
     <ClCompile Include="src\Components\battlecomponents.cpp" />
-    <ClCompile Include="src\Components\charactercomponents.cpp" />
     <ClCompile Include="src\Components\game.cpp" />
     <ClCompile Include="src\Components\physics.cpp" />
     <ClCompile Include="src\Components\rendering.cpp" />
