--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -4,7 +4,8 @@ Size=1280,713
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=60,60
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -20,10 +21,10 @@ Size=240,66
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=455,194
+Pos=135,29
 Size=671,534
 Collapsed=1
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=93,192 Size=1280,713 CentralNode=1
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 CentralNode=1
 
