--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -10,7 +10,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=317,100
+Pos=305,27
 Size=468,355
 Collapsed=1
 
@@ -26,14 +26,20 @@ Collapsed=1
 
 [Window][Scene Hierarchy]
 Pos=0,37
-Size=224,713
+Size=223,713
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=929,37
-Size=351,713
+Pos=809,37
+Size=471,713
 Collapsed=0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=2040,123 Size=1280,713 CentralNode=1
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=807,713 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=223,713 Selected=0x2E9237F7
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=582,713 CentralNode=1
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=471,713 Selected=0xE7039252
 
