--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -205,6 +205,9 @@
     <ClCompile Include="src\FlexEngine\Renderer\OpenGL\opengldebugrenderer.cpp">
       <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
     </ClCompile>
+    <ClCompile Include="src\FlexEngine\FlexMath\matrix3x3.cpp">
+      <Filter>src\FlexEngine\FlexMath</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pch.h">
@@ -389,6 +392,9 @@
     </ClInclude>
     <ClInclude Include="src\FlexEngine\Renderer\OpenGL\opengldebugrenderer.h">
       <Filter>src\FlexEngine\Renderer\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\FlexMath\matrix3x3.h">
+      <Filter>src\FlexEngine\FlexMath</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
