--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -187,6 +187,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClCompile Include="src\FlexEngine\flexformatter.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\mathconversions.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\mathfunctions.cpp" />
+    <ClCompile Include="src\FlexEngine\FlexMath\matrix3x3.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\matrix4x4.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\quaternion.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\vector2.cpp" />
@@ -249,6 +250,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\FlexMath\mathconversions.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\mathfunctions.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\matrix1x1.h" />
+    <ClInclude Include="src\FlexEngine\FlexMath\matrix3x3.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\matrix4x4.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\mathconstants.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\quaternion.h" />
