<WIP> Moved bloom shaders to engine, added checkbox to turn on & off pp

--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -26,20 +26,28 @@ Collapsed=1
 
 [Window][Scene Hierarchy]
 Pos=0,37
-Size=223,713
+Size=163,637
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][Inspector]
-Pos=809,37
-Size=471,713
+Pos=944,37
+Size=336,713
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Tools]
+Pos=0,676
+Size=163,74
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=807,713 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=223,713 Selected=0x2E9237F7
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=582,713 CentralNode=1
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=471,713 Selected=0xE7039252
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=942,713 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=163,713 Split=Y Selected=0x2E9237F7
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=111,637 Selected=0x2E9237F7
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=111,74 Selected=0xD44407B5
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=777,713 CentralNode=1
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=336,713 Selected=0xE7039252
 
