first try at addcomponent

--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -10,7 +10,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=305,27
+Pos=398,32
 Size=468,355
 Collapsed=1
 
@@ -20,26 +20,40 @@ Size=240,66
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=135,29
+Pos=287,59
 Size=671,534
 Collapsed=1
 
 [Window][Scene Hierarchy]
 Pos=0,37
-Size=223,713
+Size=195,713
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=809,37
-Size=471,713
+Pos=1027,37
+Size=253,713
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Tools]
+Pos=817,84
+Size=208,83
+Collapsed=1
+
+[Window][Example: Property editor]
+Pos=585,156
+Size=430,450
+Collapsed=0
+
+[Table][0xD181190E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=807,713 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=223,713 Selected=0x2E9237F7
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=582,713 CentralNode=1
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=471,713 Selected=0xE7039252
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1025,713 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=195,713 Selected=0x2E9237F7
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=828,713 CentralNode=1
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=253,713 Selected=0xE7039252
 
