--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -10,9 +10,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=343,34
+ViewportPos=1092,698
+ViewportId=0xAD8E88F2
 Size=468,355
-Collapsed=1
+Collapsed=0
 
 [Window][Cursor Position]
 Pos=60,60
@@ -26,7 +27,7 @@ Collapsed=1
 
 [Window][Scene Hierarchy]
 Pos=0,37
-Size=163,637
+Size=150,470
 Collapsed=0
 DockId=0x00000005,0
 
@@ -37,17 +38,17 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Tools]
-Pos=0,676
-Size=163,74
+Pos=0,509
+Size=150,241
 Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1026,713 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=163,713 Split=Y Selected=0x2E9237F7
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=111,637 Selected=0x2E9237F7
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=111,74 Selected=0xD44407B5
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=861,713 CentralNode=1
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=252,713 Selected=0xE7039252
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=150,713 Split=Y Selected=0xD44407B5
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=162,470 Selected=0x2E9237F7
+    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=162,241 Selected=0xD44407B5
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1128,713 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=874,713 CentralNode=1
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=252,713 Selected=0xE7039252
 
