WIP: Stabilize Battle System
- Enemy Death no longer crashing the game
- Checking on Player Death
- To set Move Registry to a file
- Fully Test Targeting with different num of characters

--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -36,6 +36,11 @@ Size=471,713
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Tools]
+Pos=322,91
+Size=164,74
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
   DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=807,713 Split=X
