--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -10,10 +10,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-ViewportPos=1433,428
-ViewportId=0xAD8E88F2
-Size=468,355
+Pos=1028,572
+Size=252,178
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Cursor Position]
 Pos=60,60
@@ -33,9 +33,9 @@ DockId=0x00000005,0
 
 [Window][Inspector]
 Pos=1028,37
-Size=252,713
+Size=252,533
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000007,0
 
 [Window][Tools]
 Pos=0,509
@@ -44,11 +44,13 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=150,713 Split=Y Selected=0xD44407B5
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=162,470 Selected=0x2E9237F7
-    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=162,241 Selected=0xD44407B5
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1128,713 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=874,713 CentralNode=1
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=252,713 Selected=0xE7039252
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=150,713 Split=Y Selected=0xD44407B5
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=162,470 Selected=0x2E9237F7
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=162,241 Selected=0xD44407B5
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1128,713 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=874,713 CentralNode=1
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=252,713 Split=Y Selected=0xE7039252
+      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=252,533 Selected=0xE7039252
+      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=252,178 Selected=0x47E8F9DC
 
