--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -10,9 +10,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=398,32
-Size=468,355
-Collapsed=1
+Pos=0,674
+Size=195,76
+Collapsed=0
+DockId=0x00000006,0
 
 [Window][Cursor Position]
 Pos=60,60
@@ -26,34 +27,45 @@ Collapsed=1
 
 [Window][Scene Hierarchy]
 Pos=0,37
-Size=195,713
+Size=195,635
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000008,0
 
 [Window][Inspector]
-Pos=1027,37
-Size=253,713
+Pos=796,37
+Size=484,713
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Tools]
-Pos=817,84
-Size=208,83
-Collapsed=1
+Pos=0,674
+Size=195,76
+Collapsed=0
+DockId=0x00000006,1
 
 [Window][Example: Property editor]
 Pos=585,156
 Size=430,450
 Collapsed=0
 
+[Window][Asset Browser]
+Pos=197,609
+Size=597,141
+Collapsed=0
+DockId=0x00000007,0
+
 [Table][0xD181190E,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1025,713 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=195,713 Selected=0x2E9237F7
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=828,713 CentralNode=1
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=253,713 Selected=0xE7039252
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=794,713 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=195,713 Split=Y Selected=0x2E9237F7
+      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=195,635 Selected=0x2E9237F7
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=195,76 Selected=0xD44407B5
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=597,713 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=828,570 CentralNode=1
+      DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=828,141 Selected=0x6F7CD859
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=484,713 Selected=0xE7039252
 
