--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -10,10 +10,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=0,674
-Size=195,76
+Pos=996,478
+Size=284,272
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000A,0
 
 [Window][Cursor Position]
 Pos=60,60
@@ -27,21 +27,21 @@ Collapsed=1
 
 [Window][Scene Hierarchy]
 Pos=0,37
-Size=195,635
+Size=195,479
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Inspector]
-Pos=796,37
-Size=484,713
+Pos=996,37
+Size=284,439
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000009,0
 
 [Window][Tools]
-Pos=0,674
-Size=195,76
+Pos=0,518
+Size=195,232
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000006,0
 
 [Window][Example: Property editor]
 Pos=585,156
@@ -49,8 +49,8 @@ Size=430,450
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=197,609
-Size=597,141
+Pos=197,689
+Size=797,61
 Collapsed=0
 DockId=0x00000007,0
 
@@ -60,12 +60,14 @@ Column 1  Weight=1.0000
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=794,713 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=994,713 Split=X
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=195,713 Split=Y Selected=0x2E9237F7
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=195,635 Selected=0x2E9237F7
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=195,76 Selected=0xD44407B5
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=597,713 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=828,570 CentralNode=1
-      DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=828,141 Selected=0x6F7CD859
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=484,713 Selected=0xE7039252
+      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=195,479 Selected=0x2E9237F7
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=195,232 Selected=0xD44407B5
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=797,713 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=828,650 CentralNode=1
+      DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=828,61 Selected=0x6F7CD859
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=284,713 Split=Y Selected=0xE7039252
+    DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=284,439 Selected=0xE7039252
+    DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=284,272 Selected=0x47E8F9DC
 
