--- a/MicroChess/imgui.ini
+++ b/MicroChess/imgui.ini
@@ -4,16 +4,15 @@ Size=1280,713
 Collapsed=0
 
 [Window][Debug##Default]
-ViewportPos=60,60
-ViewportId=0x9F5F46A1
+Pos=58,65
 Size=400,400
 Collapsed=0
 
 [Window][Statistics]
-Pos=996,478
-Size=284,272
+Pos=264,455
+Size=742,295
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000001,0
 
 [Window][Cursor Position]
 Pos=60,60
@@ -21,27 +20,28 @@ Size=240,66
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=287,59
-Size=671,534
-Collapsed=1
+Pos=0,37
+Size=1600,456
+Collapsed=0
+DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=0,37
-Size=195,479
+Size=262,713
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000004,0
 
 [Window][Inspector]
-Pos=996,37
-Size=284,439
+Pos=1008,37
+Size=272,713
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000005,0
 
 [Window][Tools]
-Pos=0,518
-Size=195,232
+Pos=264,455
+Size=742,295
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000001,1
 
 [Window][Example: Property editor]
 Pos=585,156
@@ -49,10 +49,32 @@ Size=430,450
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=197,689
-Size=797,61
+Pos=264,455
+Size=742,295
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000001,2
+
+[Window][GameWindow]
+Pos=119,51
+Size=1001,683
+Collapsed=0
+
+[Window][Scene]
+Pos=264,37
+Size=742,416
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][MainDockspace]
+Pos=64,50
+Size=1245,566
+Collapsed=0
+
+[Window][Game]
+Pos=264,37
+Size=742,416
+Collapsed=0
+DockId=0x00000006,1
 
 [Table][0xD181190E,2]
 Column 0  Weight=1.0000
@@ -60,14 +82,10 @@ Column 1  Weight=1.0000
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=994,713 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=195,713 Split=Y Selected=0x2E9237F7
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=195,479 Selected=0x2E9237F7
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=195,232 Selected=0xD44407B5
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=797,713 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=828,650 CentralNode=1
-      DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=828,61 Selected=0x6F7CD859
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=284,713 Split=Y Selected=0xE7039252
-    DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=284,439 Selected=0xE7039252
-    DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=284,272 Selected=0x47E8F9DC
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1006,713 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=262,713 Selected=0x2E9237F7
+    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=1016,713 Split=Y
+      DockNode  ID=0x00000006 Parent=0x00000007 SizeRef=1006,416 CentralNode=1 Selected=0x26816F31
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1006,295 Selected=0xD44407B5
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=272,713 Selected=0xE7039252
 
