--- a/MicroChess/MicroChess.vcxproj.filters
+++ b/MicroChess/MicroChess.vcxproj.filters
@@ -44,6 +44,12 @@
     <None Include="assets\shaders\texture.vert">
       <Filter>assets\shaders</Filter>
     </None>
+    <None Include="assets\shaders\batch2.0.frag">
+      <Filter>assets\shaders</Filter>
+    </None>
+    <None Include="assets\shaders\batch2.0.vert">
+      <Filter>assets\shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Layers.h">
